frontend-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devver-frontend-app
  labels:
    kasten-backup-prod-ns: "true"
