frontend-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-svc
  namespace: devver-frontend-app
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
